# hirou_compiler

./: .gitignore  Cargo.toml  NAMESPACE_IMPLEMENTATION.md  README.md  dummyC_ebnf.txt  out  out.ll  sample.dc  sample.hr  sample.ll
.claude/: settings.local.json
docs/: ARRAY_LITERAL_INFERENCE.md  GENERIC_INFERENCE_COMPLETE.md  IMPLEMENTATION_REPORT.md  INFERENCE_FLOW_DIAGRAM.md  QUICK_START_ARRAY_INFERENCE.md  RETURN_TYPE_INFERENCE.md  RETURN_TYPE_INFERENCE_IMPLEMENTATION.md  TASK_COMPLETION_SUMMARY.md
sample/: interface.hr  interface_test.hr  record-and-alloc.hr  sample.hr  test_array_inference_comprehensive.hr  test_array_inference_new.hr  test_array_inference_summary.hr  test_array_inference_validation.hr  test_array_literal.hr  test_inference.hr  test_inference_comprehensive.hr  test_inference_debug.hr  test_inference_i32_only.hr  test_inference_multiple_types.hr  test_inference_step.hr  test_namespace.hr  test_namespace_use.hr  test_request_original.hr  test_return_type_inference.hr  test_return_type_inference_comprehensive.hr  test_return_type_inference_final.hr  test_stdlib_simple.hr  test_stdlib_vec.hr  test_task_requirement.hr  test_task_requirement_final.hr  test_vec_complete.hr  test_vec_pop.hr  test_vec_pop_simple.hr  test_vec_push.hr  test_vec_push_simple.hr  test_while.hr  test_while_sum.hr  trait.hr
src/: ast.rs  codegen.rs  concrete_ast.rs  main.rs  parser.rs  resolved_ast.rs  util.rs
src/builder/: expression.rs  mod.rs  statement.rs  target.rs  toplevel.rs  ty.rs  util.rs
src/common/: binary.rs  mod.rs  target.rs  typename.rs
src/concretizer/: mod.rs
src/llvm_codegen/: context.rs  mod.rs  (+7 more)
(+26 files in other folders)
