[package]
edition = "2021"
name = "hirou_compiler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.1.3", features = ["derive"]}
inkwell = {git = "https://github.com/TheDan64/inkwell", rev = "3c5d7706861aac0750b4f0c98d6fcf8a91a2ca0a", features = ["llvm14-0"]}
llvm-sys = "140"
nom = {version = "7.1.2", features = ["alloc"]}
nom_locate = "4.0.0"
once_cell = "1.18.0"
thiserror = "1.0.38"
